enlace a index.html

--- a/HTML/WebContent/capitulo3.html
+++ b/HTML/WebContent/capitulo3.html
@@ -5,6 +5,7 @@
 <title>Capitulo 3</title>
 </head>
 <body>
+<a href="index.html">Volver a Capitulo 2</a>
 	<div id="header">
 		<div id="header_inner">
 			<img src="img/perritos.jpg" height=100 weight=200
