--- a/HTML/WebContent/capitulo3.html
+++ b/HTML/WebContent/capitulo3.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+<link href = "css/estilo.css" rel = "stylesheet" type = "text/css">
 <head>
 <meta charset="ISO-8859-1">
 <title>Capitulo 3</title>
 </head>
 <body>
-<a href="index.html">Volver a Capitulo 2</a>
+	<a href="index.html">Volver a Capitulo 2</a><br>
+	<a href="flex.html">Ir a Flex</a><br>
+	<a href="flex2.html">Ir a Flex2</a><br>
+	<a href="flow.html">Ir a Flow</a><br>
 	<div id="header">
 		<div id="header_inner">
 			<img src="img/perritos.jpg" height=100 weight=200
 				alt="Servicio de Mascotas" />
-			<div id="slogan">Perros Felices son Buenos Perros</div>
+			<div id="eslogan">Perros Felices son Buenos Perros</div>
 		</div>
 	</div>
 	<article>
@@ -68,10 +72,10 @@
 			</p>
 		</footer>
 	</article>
-	<table border="1">
+	<table class="maria">
 		<tr>
 			<!--fila 1-->
-			<th>TABLA ANIGUA -Trimestre</th>
+			<th>TABLA ANTIGUA -Trimestre</th>
 			<!--Primera fila en la primer columna-->
 			<th>Total Ventas</th>
 			<!--primera fila, segunda columna-->
@@ -138,51 +142,53 @@
 				<td>Sí</td>
 			</tr>
 		</tbody>
-		<p>Marcas de Coches más caros:</p>
-		<ol>
-			<li>Ferrari</li>
-			<li>Lamborghini</li>
-			<li>Bugatti</li>
-		</ol>
-		<p>Tipos de Ferrari:</p>
-		<ul>
-			<li>Ferrari 250</li> 
-			<li>Ferrari 250 GT Berlinetta</li>
-			<li>Ferrari 250 GTO</li>
-		</ul>
-		<p>Sabores de helados:</p>
-		<ul type="square">
-			<li>Fresa</li>
-			<li>Vainilla</li>
-			<li>Chocolate</li>
-		</ul>
-		<p>Curiosidades de los Tipos de Ferrari 250:</p>
-		<dl>
-			<dt>Ferrari 250 GT Berlinetta</dt>
-			<dd>De este tipo de coche, solo se han fabricado 350 en el
-				mundo.</dd>
-			<dt>Ferrari 250 GTO</dt>
-			<dd>Se ha llegado a vender por 60 millones de euros en una
-				subasta, el de 1963.</dd>
-		</dl>
-		<div id="contact-form"
-			style="font-family: 'Arial Narrow', 'Nimbus Sans L', sans-serif;">
-			<form id="contact" method="post" action="">
-				<fieldset>
-				<label for="empID">EmpleadoId</label>
-				<input type="text" id="empID" name="EmpleadoID"
-required pattern="[A-Z]{2}[0-9]{4}"
-title=" La identificación del empleado es seguida de dos letras mayúsculas por cuatro dígitos ">
-					<label for="name">Nombre</label> <input type="text" name=" Nombre " />
-				</fieldset>
-				<fieldset>
-					<label for="email">Correo electrónico</label> <input type="email"
-						name=" Correo electrónico " />
-				</fieldset>
-				
-					
-			</form>
-		</div>
-		<!--fin del formulario-->
+	</table>
+	<p>Marcas de Coches más caros ORDENADOS:</p>
+	<ol>
+		<li>Ferrari</li>
+		<li>Lamborghini</li>
+		<li>Bugatti</li>
+	</ol>
+	<p>Tipos de Ferrari:</p>
+	<ul>
+		<li>Ferrari 250</li> 
+		<li>Ferrari 250 GT Berlinetta</li>
+		<li>Ferrari 250 GTO</li>
+	</ul>
+	<p>Sabores de helados:</p>
+	<ul type="square">
+		<li>Fresa</li>
+		<li>Vainilla</li>
+		<li>Chocolate</li>
+	</ul>
+	<p>Curiosidades de los Tipos de Ferrari 250:</p>
+	<dl>
+		<dt>Ferrari 250 GT Berlinetta</dt>
+		<dd>De este tipo de coche, solo se han fabricado 350 en el mundo.</dd>
+		<dt>Ferrari 250 GTO</dt>
+		<dd>Se ha llegado a vender por 60 millones de euros en una
+			subasta, el de 1963.</dd>
+	</dl>
+	<div id="contact-form"
+		style="font-family: 'Arial Narrow', 'Nimbus Sans L', sans-serif;">
+		<form id="contact" method="post" action="">
+			<fieldset>
+				<label for="empID">EmpleadoId</label> <input  type="text"   id="empID"
+					name="EmpleadoID" required  pattern="[A-Z]{2}[0-9]{4}"
+					title=" La identificación del empleado es seguida de dos letras mayúsculas por cuatro dígitos ">
+				<label for="name">Nombre</label> <input type="text" required
+					name="Nombre" pattern="[A-Z][a-z]"
+					title=" El nombre del empleado solo admite letras mayusculas o minusculas" />
+			</fieldset>
+			<fieldset>
+				<label for="email">Correo electrónico</label> <input type="email"
+					readonly name="Correo electrónico" value="alguno@alguno.com" />
+			</fieldset>
+			<input type="submit" value="Buscar">
+
+
+		</form>
+	</div>
+	<!--fin del formulario-->
 </body>
 </html>
